# Speek2Words

./: .env.example  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  requirements.txt  speek2words.py
.github/workflows/: release.yml
src/: main.ts  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: asr.rs  input.rs  lib.rs  main.rs  recorder.rs  store.rs
