[package]
name = "speek2words"
version = "0.1.0"
description = "Hold hotkey to talk, release to type text at cursor"
authors = ["JaikenWong"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "speek2words_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
reqwest = { version = "0.12", features = ["json", "multipart", "blocking"] }
cpal = "0.18"
hound = "3.5"
enigo = "0.3"
arboard = "3"
